--- a/index.html
+++ b/index.html
@@ -1399,9 +1399,9 @@
             } else { storystages.push(finalstage) }
             //console.log(JSON.stringify(storystages))
             if(true===false) {
-            let fillstage = stages.filter(stage => stage.name == "Ashes of the Eternal")[0]
-            storystages[1] = fillstage
-            storystages[2] = fillstage
+            let fillstage = stages.filter(stage => stage.name == "Supply & Demand")[0]
+            storystages[7] = fillstage
+            storystages[8] = fillstage
             }
             return [storystages, stages]
 
@@ -1970,7 +1970,7 @@
                         `Investigating the aftermath of the battle reveals extensive research into surpassing human limits, seemingly connected to ${finalboss.name}. "Seeking to surpass human boundaries.." you wonder out loud, the evidence ${ambiguity_element}`,
                         `You come across heavily encrypted files detailing experimental trials under ${possessiveSuffix(enemy.boss)} orders, aimed at significant power enhancements. "For ${possessiveSuffix(finalboss.boss)} ambition?" It becomes evident, the findings ${ambiguity_element}`,
                         `Uncovering a series of confidential documents, there's a clear trail back to ${finalboss.name}, outlining a comprehensive study for transcending physical and mental human capacities. "A blueprint for ${possessiveSuffix(finalboss.boss)} supremacy," you conclude. The research ${ambiguity_element}`,
-                        `The defeated ${enemy.minions()} speak of a hidden gym where ${enemy.boss} is seen entering at odd hours, sometimes with ${finalboss.boss === enemy.boss ? `a mysterious trainer` : possessiveSuffix(finalboss.boss)}. "Training, or something more?" you wonder, the whispers in the wind ${ambiguity_element}`,
+                        `The defeated ${enemy.minions()} speak of a hidden gym where ${enemy.boss} is seen entering at odd hours, sometimes with ${finalboss.boss === enemy.boss ? `a mysterious trainer` : `${possessiveSuffix(finalboss.boss)} company`}. "Merely training, or something more?" you wonder, the whispers in the wind ${ambiguity_element}`,
                         `In the aftermath you find a ${gizmo}, filled with cellular modification records. "${finalboss.boss} playing god," you mutter, the clues ${ambiguity_element}`,
                         `Scattered notes about harnessing untapped potential suggest a pursuit of dangerous knowledge. "What limits is ${finalboss.name} trying to break?" you wonder, the notes ${ambiguity_element}`,
                         `An artefact is found in the aftermath, with no clear function but emitting a low hum of energy. You get a feeling this has to have something to do with ${finalboss.boss}. "A tool for empowerment or destruction?" you question. Investigation of the trail of possession ${ambiguity_element}`
@@ -2013,7 +2013,6 @@
 
             gatherclues = masterplanclues;
         }
-
 
 
             let planning = [`. You decide to pay them a visit.`, `. Agent Fletch suggests you continue your investigations there.`, `. A frightened ${bystanders} begs you to hurry up!`, `, and you think there really is no other option than to investigate.`, `. Perhaps it is time to visit ${nextenemy.boss}.`,`. This new insight leaves you with no choice but to take immediate action.`,`. With the information in hand, your next move is clear. The team is ready to follow your lead.`,`. The intel points towards a pivotal next step; hesitation is no longer an option.`,`. Now, with a clearer picture, it's time to plan your next strategic move.`,`. The revelations compel you to act swiftly; there's much to be done.`,`. Armed with this knowledge, you're one step closer to thwarting their plans.`,`. The pieces are coming together, prompting an urgent response.`,`. With these clues unraveled, the path forward is undeniable.`,`. This information is the key you needed; now it's time to unlock the next door.`,`. Understanding their motives better now, you prepare to counter their next move.`]
@@ -2229,7 +2228,7 @@
             let hence_words = [`Accordingly`, `Hence`, `So`, `Consequently`, `Therefore`, `Thus`]
             let default_clues = [
                 "Based on current intel", "Chasing the clues", "Following your leads", "In pursuit of clues", "After a little more intel-gathering", "Following this lead", "As you investigated further", "After searching for more intel", "Following the intel you had", "After searching for more information", "Reviewing what you got", "With the information you gathered", `You tracked down some of the ${enemy.name} associates and tailed their movements. ${randFrom(hence_words)}`, `Following the trail of money leading from the previous encounter`, `"We've traced them," Agent Fletch says, seated across the table. He takes out a satellite image and lays it on the table, pointing to a small red dot near the image's center. ${randFrom(hence_words)}`, `"Here," Agent Fletch stabs his finger onto the table, pointing on a map unfolded there. "Is where there your next stop is." ${randFrom(hence_words)}`, `"The ${randFrom(intel_words_2)} has been confirmed," the Citadel analyst turns from ${randFrom([`his`, `her`])} computer. ${randFrom(hence_words)}`,
-                `A Vandal-addicted informat had some oddly specific ${randFrom(intel_words_2)}, and you decided to follow that up. Surprised by the accuracy`,
+                `A Vandal-addicted informat had some oddly specific ${randFrom(intel_words_2)}, and you decided to check how it fits with what you already knew. Surprised by the accuracy`,
                 `Your ${randFrom(intel_words_2)} was not specific enough, but a mysterious government official approaches you to lead you further. "The most important thing is that you cannot tell anyone that I was here or that we spoke," ${randFrom([`he`, `she`])} reminds you. ${randFrom(hence_words)}`,
                 `"With the clues pieced together," you remark, looking over the compiled data. "It's time we follow where they point." ${randFrom(hence_words)}`,
                 `"This breadcrumb trail is leading us somewhere," you muse aloud, studying the patterns of the enemy's recent activities. ${randFrom(hence_words)}`,`"Our latest intel sheds new light on their operations," your teammate observes, handing you a file of gathered evidence. ${randFrom(hence_words)}`,`"Cross-referencing the information," you begin, laying out the connections on the digital map. "Leads us right here." ${randFrom(hence_words)}`,`After decrypting the last of the ${randFrom(intel_words_2)}, "We've got a lead worth chasing," you declare. ${randFrom(hence_words)}`,`"This snippet," you replay the audio, "pinpoints their next move." ${randFrom(hence_words)}`,`"The satellite images don't lie," you note, zooming in on a suspicious compound. "They've been busy." ${randFrom(hence_words)}`,`"Their mistake was leaving traces," you say, scanning through ${randFrom(intel_words_2)}. "Now, we're on their trail." ${randFrom(hence_words)}`,`"The ledger reveals more than they intended," you point out, highlighting the anomalies. "Follow the money." ${randFrom(hence_words)}`,`"Detaled analysis of the recovered ${randFrom(intel_words_2)} confirms us our next target." ${randFrom(hence_words)}`,`"The pattern is no coincidence," you deduce, plotting out the ${randFrom(intel_words_2)} you have over your map. "It all connects here." ${randFrom(hence_words)}`,`After a confidential informant comes forward, "This might just be the breakthrough we needed," you realize. ${randFrom(hence_words)}`,`"Correlating the ${randFrom(intel_words_2)} with the witness statements," you conclude, "points us directly to their next operation." ${randFrom(hence_words)}`,`"Surveillance footage gave us the last piece," you highlight the key moments. "Time to act on it." ${randFrom(hence_words)}`,`"The intercepted communique is clear," you decipher the coded message with the aid of existing ${randFrom(intel_words_2)}. "Their next move is imminent." ${randFrom(hence_words)}`
@@ -2307,8 +2306,8 @@
             } else { wincondition_txt = randFrom(default_clues) }
 
             let lead_in = pregameprologue + first_is_final + wincondition_txt
-console.log(wincondition)
-console.log(wincondition_txt)
+//console.log(wincondition)
+//console.log(wincondition_txt)
             return lead_in
         }
 
@@ -2644,8 +2643,7 @@ console.log(wincondition_txt)
                 [`I would've waited an eternity for this,`, `It's over, ${defineAddressing(enemy)}.`],
                 [`It's a pity you Gladiators die so easily,`, `Or I might have a sense of satisfaction now.`],
                 [`Come now, ${defineAddressing(enemy)},`, `We all must die sometime.`],
-                [`You don't have to do this," you say. "People always say the same thing,`, `They say: 'You don't have to do this'.`],
-                [`Have you ever seen blood in the moonlight, ${defineAddressing(enemy)}?`, `It appears quite black.`],
+                [`You don't have to do this," you say. "That's tiresome,`, `You Gladiators always say the same thing.`],
                 [`Do you like life?" ${enemy.boss} asks. "Yes," you answer. "That's good,`, `Because I take no pleasure in taking a life if it’s from a person who doesn’t care about it.`],
                 [`You should've moved to a Brook City, or somewhere the rule of law still exists,`, `You will not survive here. You are not a ${enemy.name == "Golden Dragons" ? `dragon` : `tiger`}, and this is a land of ${enemy.name == "Golden Dragons" ? `dragons` : `tigers`} now.`],
                 [`It looks like you have run out of luck,`, `How dare you challenge us?!`],
